5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/1165/executions/1590_825.log
== TEST (2019-03-29 10:19:05) 
-- CODE:
from math import*
raio = 2
area = pi * raio **2
volume = 4/3 * pi * raio **3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:19:14) 
-- CODE:
from math import*
raio = 2
area = pi * raio **2
volume = 4/3 * pi * raio **3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.177972
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:20:38) 
-- CODE:
from math import*
raio = 2
area = pi * raio**2
volume = 4/3 * pi * raio**3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:20:51) 
-- CODE:
from math import*
raio = 2
area = pi * raio**2
volume = 4/3 * pi * raio**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.180539
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:25:03) 
-- CODE:
from math import*
raio = 2
area = pi * raio**2
volume = (4/3) * pi * raio**3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:25:10) 
-- CODE:
from math import*
raio = 2
area = pi * raio**2
volume = (4/3) * pi * raio**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.128426
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:26:45) 
-- CODE:
from math import*
raio = 2
area = (pi)* raio**2
volume = (4/3)* (pi) * raio**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.191794
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 10:30:52) 
-- CODE:
from math import*
raio = 2
area = (pi) * (raio)**2
volume = (4/3) * (pi) * (raio)**3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 10:31:00) 
-- CODE:
from math import*
raio = 2
area = (pi) * (raio)**2
volume = (4/3) * (pi) * (raio)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.123246
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:18:37) 
-- CODE:
from math import*
raio = x
area = (pi) * (x)**2
volume = (4/3) * (pi) * (x)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    raio = x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:19:18) 
-- CODE:
from math import*
raio = 1
area = (pi) * (1)**2
volume = (4/3) * (pi) * (1)**3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
3.142
4.189
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:19:40) 
-- CODE:
from math import*
raio = 1
area = (pi) * (1)**2
volume = (4/3) * (pi) * (1)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.243078
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
3.142
4.189
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
3.142
4.189
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:21:58) 
-- CODE:
from math import*
raio = 2
area = (pi) * (2)**2
volume = (4/3) * (pi) * (2)**3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:22:40) 
-- CODE:
from math import*
raio = 2.0
area = (pi) * (2.0)**2
volume = (4/3) * (pi) * (2.0)**3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:23:02) 
-- CODE:
from math import*
raio = 2.0
area = (pi) * (2.0)**2
volume = (4/3) * (pi) * (2.0)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.197587
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:25:40) 
-- CODE:
r = input("qual o vaor do raio?")
area = (pi) * (r)**2
volume = (4/3) * (pi) * (r)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi) * (r)**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:26:19) 
-- CODE:
r = input("Qual o valor do raio?")
area = (pi) * (r)**2
volume = (4/3) * (pi) * (r)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.153913
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 2, in <module>
    area = (pi) * (r)**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:27:07) 
-- CODE:
var = float(input("Qual o valor do raio?"))

area = (pi) * (var)**2
volume = (4/3) * (pi) * (var)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = (pi) * (var)**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:27:23) 
-- CODE:
var = float(input("Qual o valor do raio?"))

area = (pi) * (var)**2
volume = (4/3) * (pi) * (var)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.132582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 3, in <module>
    area = (pi) * (var)**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:28:16) 
-- CODE:
var = (input("2"))

area = (pi) * (var)**2
volume = (4/3) * (pi) * (var)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = (pi) * (var)**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:28:36) 
-- CODE:
var = (input("2"))

area = (pi) * (var)**2
volume = (4/3) * (pi) * (var)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.186051
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 3, in <module>
    area = (pi) * (var)**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:40:12) 
-- CODE:
x = float(input("Qual o valor do raio"))

area = (pi) * (x)**2
volume = (4/3) * (pi) * (x)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = (pi) * (x)**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 11:40:33) 
-- CODE:
x = float(input("Qual o valor do raio"))

area = (pi) * (x)**2
volume = (4/3) * (pi) * (x)**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.153044
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/825/main.py", line 3, in <module>
    area = (pi) * (x)**2
NameError: name 'pi' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:41:11) 
-- CODE:
x = float(input("Qual o valor do raio"))
a = 2
area = (pi) * (2)**2
volume = (4/3) * (pi) * (2)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    area = (pi) * (2)**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 11:41:44) 
-- CODE:
a = 2
area = (pi) * (2)**2
volume = (4/3) * (pi) * (2)**3

print(round(area, 3))
print(round(volume, 3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (pi) * (2)**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:10:48) 
-- CODE:
from math import* 
r = 2
area = (pi) * (r) ** 2
volume = (4/3) * (pi) * (r) ** 3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:11:37) 
-- CODE:
from math import* 
r = 2
area = (pi) * (r) ** 2
volume = (4/3) * (pi) * (r) ** 3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:11:59) 
-- CODE:
from math import* 
r = 2
area = (pi) * (r) ** 2
volume = (4/3) * (pi) * (r) ** 3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.137389
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:14:18) 
-- CODE:
from math import* 
raio1 = (2) ** 2
raio2 = (2) **3
area = (pi) * raio1
volume = (4/3) * (pi) * raio2

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:14:45) 
-- CODE:
from math import* 
raio1 = (2) ** 2
raio2 = (2) ** 3
area = (pi) * raio1
volume = (4/3) * (pi) * raio2

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:14:57) 
-- CODE:
from math import* 
raio1 = (2) ** 2
raio2 = (2) ** 3
area = (pi) * raio1
volume = (4/3) * (pi) * raio2

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.215776
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:15:29) 
-- CODE:
from math import* 
raio1 = (2) ** 2
raio2 = (2) ** 3

area = pi * raio1
volume = (4/3) * pi * raio2

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.122916
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:16:05) 
-- CODE:
from math import* 
a = (2) ** 2
b = (2) ** 3

area = pi * a
volume = (4/3) * pi * b

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:16:44) 
-- CODE:
from math import* 
a = (2) ** 2
b = (2) ** 3

area = pi * a
volume = (4/3) * pi * b

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.150505
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 16:16:53) 
-- CODE:
from math import* 
a = (2) ** 2
b = (2) ** 3

area = pi * a
volume = (4/3) * pi * b

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.126564
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
12.566
33.51
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
12.566
33.51
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 16:16:59) 
-- CODE:
from math import* 
a = (2) ** 2
b = (2) ** 3

area = pi * a
volume = (4/3) * pi * b

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:15:03) 
-- CODE:
from math import* 
a = (2) ** 2
b = (2) ** 3

area = pi * a
volume = (4/3) * pi * b

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
12.566
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:26:49) 
-- CODE:
raio = float(input("valor do raio"))
from math import*


area = pi * 2
volume = (4/3) * pi * 3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
6.283
12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:26:53) 
-- CODE:
raio = float(input("valor do raio"))
from math import*


area = pi * 2
volume = (4/3) * pi * 3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.20212
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
6.283
12.566
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
6.283
12.566
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 13:27:26) 
-- CODE:
raio = float(input("insira o valor do raio: "))
from math import*


area = pi * 2
volume = (4/3) * pi * 3

print(round(area, 3))
print(round(volume, 3))

-- OUTPUT:
6.283
12.566
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 13:28:08) 
-- CODE:
raio = float(input("insira o valor do raio: "))
from math import*


area = pi * raio **2
volume = (4/3) * pi * raio**3

print(round(area, 3))
print(round(volume, 3))

-- EXECUTION TIME:
0.170312
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
